--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "electron": "^1.4.1",
     "electron-packager": "^8.1.0",
     "snazzy": "^5.0.0"
+  },
+  "dependencies": {
+    "electron-config": "^0.2.1"
   }
 }
