--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "snazzy": "^5.0.0"
   },
   "dependencies": {
-    "electron-config": "^0.2.1"
+    "electron-config": "^0.2.1",
+    "ps-list": "^3.1.0"
   }
 }
